fixing the header visibility

--- a/Portfolio/assets/css/main.css
+++ b/Portfolio/assets/css/main.css
@@ -3496,15 +3496,15 @@ input, select, textarea {
 		}
 
 		body.is-preload #banner p {
-			opacity: 0;
+			opacity: 100;
 			-moz-transform: translateX(0.5em);
 			-webkit-transform: translateX(0.5em);
 			-ms-transform: translateX(0.5em);
 			transform: translateX(0.5em);
-			-moz-filter: blur(2px);
+			/* -moz-filter: blur(2px);
 			-webkit-filter: blur(2px);
 			-ms-filter: blur(2px);
-			filter: blur(2px);
+			filter: blur(2px); */
 		}
 
 /* Wrapper */
